# summary_and_classify_remopoke

./: Makefile  README.md  pyproject.toml
data/: remopoke_videos.csv
front/: package-lock.json  package.json
front/src/app/: layout.tsx  page.tsx
front/src/components/: search.tsx
output/: remopoke_videos_summary.csv  remopoke_videos_summary_langchain_35turbo.csv  remopoke_videos_summary_langchain_35turbo_1st_tags.csv  remopoke_videos_summary_langchain_35turbo_with_top_middle_tags.csv
scripts/: get_presentation_summary.py
